--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,6 +22,14 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
+      - file: "src/pages/front-end/index.md"
+        label: "Front-End"
+        name: "webdev"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "front-end-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: Heading, name: heading, widget: string}
+          - {label: Description, name: description, widget: string}
       - file: "src/pages/about/index.md"
         label: "About"
         name: "about"
