--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -22,11 +22,11 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
-      - file: "src/pages/front-end/index.md"
-        label: "Front-End"
+      - file: "src/pages/webdev/index.md"
+        label: "WebDev"
         name: "webdev"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "front-end-page"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "web-dev-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: Heading, name: heading, widget: string}
           - {label: Description, name: description, widget: string}
