--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,6 +6,18 @@ media_folder: static/img
 public_folder: /img
 
 collections:
+  - name: "doing"
+    label: "Doing"
+    folder: "src/pages/doing"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "doing-post"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Tags", name: "tags", widget: "list"}
   - name: "blog"
     label: "Blog"
     folder: "src/pages/blog"
@@ -18,7 +30,6 @@ collections:
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
-
   - name: "pages"
     label: "Pages"
     files:
