--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,6 +33,13 @@ collections:
   - name: "pages"
     label: "Pages"
     files:
+      - file: "src/pages/version/index.md"
+        label: "Version"
+        name: "version"
+        fields:
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "version-page"}
+          - {label: "Title", name: "title", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/webdev/index.md"
         label: "WebDev"
         name: "webdev"
